unpackaged/main/default/objects/abacus__Accounting_Mapping_Set__mdt/abacus__Accounting_Mapping_Set__mdt.object-meta.xml
<CustomObject>
    <description>Enables the creation of Accounting Sets, where you can specify what objects and fields can create Ledger Entries.</description>
    <label>Accounting Mapping Set</label>
    <pluralLabel>Accounting Mapping Sets</pluralLabel>
</CustomObject>