unpackaged/main/default/objects/abacus__Accounting_Mapping_Set__mdt/fields/abacus__Accounting_Data_Record_Type_Filter__c.field-meta.xml
<CustomField>
    <fullName>abacus__Accounting_Data_Record_Type_Filter__c</fullName>
    <description>Objects only generate accounting data if their record type is listed here. If no record types are defined, all Objects generate accounting data. Semicolon-delimited, API names only. Case-sensitive.</description>
    <inlineHelpText>Objects only generate accounting data if their record type is listed here. If no record types are defined, all Objects generate accounting data.  This field is case-sensitive.</inlineHelpText>
    <label>Accounting Data Record Type Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>