unpackaged/main/default/objects/abacus__Accounting_Mapping_Set__mdt/fields/abacus__Accounting_Job_Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>abacus__Accounting_Job_Filter_Criteria__c</fullName>
    <description>The criteria that define which records are processed when the Accounting Scheduled Job runs. Must be written in the form of a SOQL query WHERE clause.</description>
    <inlineHelpText>Defines the records processed by the Accounting Scheduled Job. Must be written in the form of a SOQL query WHERE clause.</inlineHelpText>
    <label>Accounting Job Filter Criteria</label>
    <type>TextArea</type>
</CustomField>