unpackaged/main/default/objects/abacus__Accounting_Mapping_Set__mdt/fields/abacus__Accounting_Records_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>abacus__Accounting_Records_Start_Date__c</fullName>
    <description>Records with a Created Date older than this date don't generate accounting data and are not processed by the Scheduled Accounting Job.</description>
    <inlineHelpText>Records with a Created Date older than this date don't generate accounting data and are not processed by the Scheduled Accounting Job.</inlineHelpText>
    <label>Accounting Records Start Date</label>
    <type>DateTime</type>
</CustomField>