unpackaged/main/default/objects/abacus__Accounting_Mapping_Set__mdt/fields/abacus__Default_Accrued_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>abacus__Default_Accrued_Account_Code__c</fullName>
    <description>The name of your accounting system's default accrual account. This should match the name used in your accounting software. Requires an Accounting Subledger Growth Edition license.</description>
    <inlineHelpText>The name of your accounting system's default accrual account. This should match the name used in your accounting software. Requires an Accounting Subledger Growth Edition license.</inlineHelpText>
    <label>Default Accrued Account Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>