unpackaged/main/default/objects/abacus__Accounting_Mapping_Set__mdt/fields/abacus__Default_Write_Off_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>abacus__Default_Write_Off_Account_Code__c</fullName>
    <description>The name of your accounting system’s code for written off payments. This should match the name used in your accounting software.</description>
    <inlineHelpText>The name of your accounting system’s code for written off payments. This should match the name used in your accounting software.</inlineHelpText>
    <label>Default Write-Off Account Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>