unpackaged/main/default/objects/abacus__Accounting_Mapping_Set__mdt/fields/abacus__Group_Revenue_By_Due_Date_And_Allocation__c.field-meta.xml
<CustomField>
    <fullName>abacus__Group_Revenue_By_Due_Date_And_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines how allocation Ledger Entries are generated by setting the value of Revenue Grouping Scheme on each Object. If unchecked, an allocation Ledger Entry is created for each Fund. If checked, an allocation Ledger Entry is created for each Fund and Scheduled Payment Date.</description>
    <inlineHelpText>If unchecked, an allocation Ledger Entry is created for each Fund. If checked, an allocation Ledger Entry is created for each Fund and Scheduled Payment Date</inlineHelpText>
    <label>Group Revenue By Due Date And Allocation</label>
    <type>Checkbox</type>
</CustomField>