unpackaged/main/default/objects/abacus__Accounting_Mapping_Set__mdt/fields/abacus__In_Use__c.field-meta.xml
<CustomField>
    <fullName>abacus__In_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this Accounting Set is now in use.</description>
    <inlineHelpText>If checked, certain aspects of the Accounting Set, such as the selected objects can no longer be updated.  Once an Accounting Set is activated at least once, it is considered "In Use".</inlineHelpText>
    <label>In Use</label>
    <type>Checkbox</type>
</CustomField>