unpackaged/main/default/objects/abacus__Accounting_Mapping_Set__mdt/fields/abacus__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>abacus__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates Accounting Scheduled Job will process this Accounting Mapping Set when it runs.</description>
    <inlineHelpText>If true, this Accounting Set will be included in processing when the Accounting Scheduled Job runs.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>