unpackaged/main/default/objects/abacus__Accounting_Mapping_Set__mdt/fields/abacus__Load_Order__c.field-meta.xml
<CustomField>
    <fullName>abacus__Load_Order__c</fullName>
    <description>Determines the load order for the Accounting Sets if you have multiple sets. Lower numbers will run first.  For example, load order 1 runs before load order 2.</description>
    <inlineHelpText>If you have more than one Accounting Set, your load order determines the sequence at which they run. The lower  number will run first.  For example, load order 1 will run before load order 2.</inlineHelpText>
    <label>Load Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>