unpackaged/main/default/objects/abacus__Accounting_Mapping_Set__mdt/fields/abacus__Mapping_JSON__c.field-meta.xml
<CustomField>
    <fullName>abacus__Mapping_JSON__c</fullName>
    <description>The JSON string used when creating your field mapping.</description>
    <inlineHelpText>This JSON will be used to transmit financial data to your Accounting Engine.</inlineHelpText>
    <label>Mapping JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>