unpackaged/main/default/objects/abacus__Accounting_Mapping_Set__mdt/fields/abacus__Type__c.field-meta.xml
<CustomField>
    <fullName>abacus__Type__c</fullName>
    <defaultValue>'Revenue'</defaultValue>
    <description>The Type of Accounting Data, E.g. Revenue, Expense</description>
    <inlineHelpText>Controls whether the Accounting Data being generated for this Accounting Set should be considered Revenue or Expense</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revenue</fullName>
                <default>true</default>
                <label>Revenue</label>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>